force-app/main/default/objects/FLODocs__FLO_Change_Log__c/FLODocs__FLO_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Strongpoint object to track information of the change itself including who changed a customization and when among other details.</description>
    <label>Change Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>