force-app/main/default/objects/FLODocs__FLO_Change_Log__c/fields/FLODocs__Active__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>