force-app/main/default/objects/FLODocs__FLO_Change_Log__c/fields/FLODocs__Compliant_Indicator__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Compliant_Indicator__c</fullName>
    <description>Flag red/green of the FLO Change Log</description>
    <formula>IMAGE(
IF( FLODocs__Noncompliance__c == true, &quot;/img/samples/flag_red.gif&quot;,&quot;/img/samples/flag_green.gif&quot;),&quot; &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag red/green of the FLO Change Log</inlineHelpText>
    <label>Compliant Indicator</label>
    <type>Text</type>
</CustomField>