force-app/main/default/objects/FLODocs__FLO_Change_Log__c/fields/FLODocs__Diff_Summary_Profile_Custom_Permissions__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Diff_Summary_Profile_Custom_Permissions__c</fullName>
    <label>Diff Summary Profile Custom Permissions</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>