force-app/main/default/objects/FLODocs__FLO_Change_Log__c/fields/FLODocs__Diff_Summary_Profile_User_Permissions__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Diff_Summary_Profile_User_Permissions__c</fullName>
    <label>Diff Summary Profile/PS User Permissions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>