force-app/main/default/objects/FLODocs__FLO_Change_Log__c/fields/FLODocs__External_Audit_Comments__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__External_Audit_Comments__c</fullName>
    <description>Notes from the external audition</description>
    <inlineHelpText>Notes from the external audition</inlineHelpText>
    <label>External Audit Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>