force-app/main/default/objects/FLODocs__FLO_Change_Log__c/fields/FLODocs__Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Metadata_Type__c</fullName>
    <description>Salesforce metadata type of the Customization related to the change log</description>
    <formula>TEXT(FLODocs__FLO_Customization__r.FLODocs__Salesforce_Types__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce metadata type of the Customization related to the change log</inlineHelpText>
    <label>Metadata Type</label>
    <type>Text</type>
</CustomField>