force-app/main/default/objects/FLODocs__FLO_Change_Log__c/recordTypes/FLODocs__Change_Log_Audit_Trail.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Change_Log_Audit_Trail</fullName>
    <active>true</active>
    <label>Change Log Audit Trail</label>
</RecordType>