force-app/main/default/objects/FLODocs__FLO_Change_Log__c/recordTypes/FLODocs__Flo_Change_Log_Other.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Flo_Change_Log_Other</fullName>
    <active>true</active>
    <label>Flo Change Log Other</label>
</RecordType>