force-app/main/default/objects/FLODocs__FLO_Change_Log__c/recordTypes/FLODocs__Flo_Change_Log_PermissionSet.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Flo_Change_Log_PermissionSet</fullName>
    <active>true</active>
    <label>Flo Change Log PermissionSet</label>
</RecordType>