force-app/main/default/objects/FLODocs__FLO_Change_Log__c/recordTypes/FLODocs__Flo_Change_Log_PermissionSet_New_2.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Flo_Change_Log_PermissionSet_New_2</fullName>
    <active>true</active>
    <label>Flo Change Log PermissionSet New 2</label>
</RecordType>