force-app/main/default/objects/FLODocs__FLO_Change_Log__c/listViews/FLODocs__Apex_Script_Changes_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Apex_Script_Changes_2</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FLODocs__Compliant_Indicator__c</columns>
    <columns>FLODocs__Compliance__c</columns>
    <columns>FLODocs__Reason__c</columns>
    <columns>FLODocs__Metadata_Type__c</columns>
    <columns>FLODocs__FLO_Customization__c</columns>
    <columns>FLODocs__Status_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Metadata_Type__c</field>
        <operation>equals</operation>
        <value>ApexClass</value>
    </filters>
    <filters>
        <field>FLODocs__Metadata_Type__c</field>
        <operation>equals</operation>
        <value>ApexComponent</value>
    </filters>
    <filters>
        <field>FLODocs__Metadata_Type__c</field>
        <operation>equals</operation>
        <value>ApexTrigger</value>
    </filters>
    <filters>
        <field>FLODocs__Metadata_Type__c</field>
        <operation>equals</operation>
        <value>ApexPage</value>
    </filters>
    <filters>
        <field>FLODocs__New_Customization__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Apex Script Changes (v2)</label>
</ListView>