force-app/main/default/objects/FLODocs__FLO_Change_Log__c/listViews/FLODocs__Managed_Package_Changes_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Managed_Package_Changes_2</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FLODocs__Actual_Change_DateTime__c</columns>
    <columns>FLODocs__FLO_Customization__c</columns>
    <columns>FLODocs__Metadata_Type__c</columns>
    <columns>FLODocs__Compliance__c</columns>
    <columns>FLODocs__Compliant_Indicator__c</columns>
    <columns>FLODocs__Related_Change_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Package__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Managed Package Changes (v2)</label>
</ListView>