force-app/main/default/objects/FLODocs__FLO_Change_Log__c/listViews/FLODocs__What_Changed_Latest_Changes_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__What_Changed_Latest_Changes_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Actual_Change_DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FLODocs__Compliant_Indicator__c</columns>
    <columns>FLODocs__FLO_Customization__c</columns>
    <columns>FLODocs__Metadata_Type__c</columns>
    <columns>FLODocs__Operation__c</columns>
    <columns>FLODocs__Policy__c</columns>
    <columns>FLODocs__Reason__c</columns>
    <columns>FLODocs__Related_Change_Request__c</columns>
    <columns>FLODocs__Related_Process_Issue__c</columns>
    <columns>FLODocs__Short_Resolution_Description__c</columns>
    <columns>FLODocs__Status_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>What Changed - Latest Changes (v2)</label>
</ListView>